--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ install:
 build_script:
   - mvn clean package --batch-mode -DskipTest
 test_script:
-  - mvn clean install --batch-mode
+  - mvn clean test --batch-mode
 cache:
   - C:\maven\
   - C:\Users\appveyor\.m2
